--- a/TastyBites/Manager/ManagerDashboard.resx
+++ b/TastyBites/Manager/ManagerDashboard.resx
@@ -121,83 +121,83 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHsAAABDCAYAAAC87nq/AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAABHQSURBVHhe7ZyLj1XVFcb9L9qmaUtqY1spvjXRTpnS
-        UiPWaqrGoFStUQGFGOwUbX2VAC0Qy2Mqiig4PjJiHUGNYpkxFuQ1A0VERyCCgQqopWPBy4iAILvnt+5Z
-        h332Xec+BhBkzk6+3HvX3mefe863v7XW3udxknMuRy+BacxxYsI05jgxYRpznJgwjTlOTJjG4x5f7HNu
-        zwfOfbalCL4f+CyqMtrmSGAaj2tE5M59YrIbcsXF7uQ+fQR8b5o+1u376G3n9heiZsZ2OY5jsg8eKBKH
-        YlEytojoO267wY1uaHDr1q7FJqWttdXdeMsod9aP+grpovawvxzHKdkRyR2vPiXEApTsute6cXePdHNb
-        WqImpeXz/V+4KbOfdXX9B8g2OeGlMI3HFJGi1618wQ0adIkrFMQli3IbRo1wjdOmye+s0lXY7ea8ukoI
-        Z2C4vf/FbO+nF8I0HlNEqoYo301TIF7JL1dWb/hACD/7nPPEO0g4sPbTC2EajykisoffcJXbtnVr9LP2
-        srWr4F5Ytt79YcIDRXeeJ2wJTOMxRZSMEaOHDx0a/ay9ELshG3WTpcu0zNpPL4RpPOJAXV2tzm2e6tyb
-        VzvXXufcwj42/hURtGmquPL+dXUSr2spn3y6V8gGOdlpmMYjAgj+KMqcOyOFWqRWwvrRMo2C8FrKu1s/
-        TpRNOMiTtEMwjYcFSEbBS04rIXDfvG+73c3fcrse+abb0fgNE9QDyEaZHe3tUbfpwvTLiukarwHzbknQ
-        8pidwDT2GAbJEAeJ/xnzNRNdU04rsW2f8F3X/tJMd83gwVG3pWXV6jVCJnH9/Y0bhOSl77yfEI26cf8s
-        vjROvDOfc8cwjTWjO5omEWs9klHv9vFfLyFSAaGbFz0krrqzbYbbu+pB9+mCBve/RwbKJ5l0uYyc2Dxr
-        /gqZj5N5P/PPt1zL4neEbObbWvAC+Zy7CNNYE4jLHskouRzJis+WTXL1F5znLjr3LHfmD3/gTv3eyeK2
-        UWLbvIfduLFjo+7LlGj+jKJ1EWXUPROEfFW2X/AA29a18dU+hl4C01g1oriqJB945Tuua1JlkgGum+nV
-        wLPPcHdfPshdP7DeXT3gJ/J5ad0F7vTvnyKJGWvduOJyiynzV2xw0+ctdfUDB7l7H2hOuXIt7StX53Pu
-        CKaxKnhEV6tmBS4bVY++9EJ368U/d1fVFRU+4MzTReEMgpt/0V9wfr++qaXTsLStek/cN0SjcFU3oI5Y
-        zoCQ+N/Lp2GmsSICoi1Cs6DxGHIhG6Ih97LzzxGyr//p+QnR1KN86i3Cd+/9PCEWdQ8Z9juBT7giJ7sn
-        ZG+d3WOicd/E4/oz+iVEE6fnPvwnUTADALJ9oPwswles35aQCcFTmxeIuiGe3yRt1GGvZs49YdQIVy2W
-        /OPlaBO7nyONro8+dCC01wrTmIkdy3tMNCDTJgFT5V52Yb0rvB2dtLUtbutrM9w1v/qZJGuo3Cectko4
-        cZy5d+em7QnRAIIhldh92RWDJWEjS7+l4R65KMKVtEoXRfx9VsLzTbOiTex+jhQg+NGJ42V/6998IzLZ
-        7aqFaTRBchPPoUnGLDIrgekWCx2QBqlNf71biHadcxK0PnpvUo/y9eQq4diI66h8fONjko2jYIjGtnbx
-        k67QOdm1vTg7yezlDpYqblvSfVWDo0124z13pvb35ZLtxelqs+4QTLeI13o7EYDUdS9OSchG4cOvviSp
-        h1hcPGrXOK4hAJXTBteNenHVSrAs0zIttI4lA3piW1uecffedF3qZANOuH5Xsnd3d4ud3z6wUad9K/z2
-        fKJePgELRLThu79fwH8K2/vQfkOb7hek/kgmWDSJiWaxxCKyEroaz5UFFLLwSwbWudHDhghZkA3BSjbE
-        K9EhlHQOnliuCRxTNux4BKZttJXcAk9Uw3RLTywnirisvxV+GyXVr7fgx3bI5H9b7QD79PdhIWuf/GfL
-        pvsGyZey4ErVYbhvgAvfv+E5idPbVs4TYgsdTSmiFY+NH+mWN/8l+T23cbQQicpV6WTuJHQKfkM0CR+u
-        /GD7L4sDlCVc65gM+IrIIlvboDS/Dk8AEZZH0OTKd830T/uGwZenbLTT3xaOLtmsK8eq1jVuiNv14giZ
-        Rllr21nY1/m4qG7v+lfcprZHBHvefDpFNOhe+ZTUMRCob7zrpiSp4yBQMRl9/en9ZBBAPv3KsmhXq/w/
-        Ekj536jbOq4KyCLbAup9Y8nr4oZBuJ2e9LBPfjdPnyagjbpxi1ASNey08wcIoB8GlN8/A0sHmSL1p03E
-        sdpXNYsixEeAiqolnMGBsj9cNd9tXDBT8OGiyN0GZEO01vOdpA13jwu03CDKhnBUT8wmZJBX6CCtNXaD
-        asiG4PDEW1Cys1QJOC7f5Yf1vkpp59fxH7CrV6EvK19I/TCBMjoGuB2rZ8iVKJIsMuo/jxwi0ybcJjaL
-        3BCQTfth114pSoT40TdemXLlKLlt1jhx3Up419ImcesQjrqzCEflDMDCs7+R/SXqJlmzjq0MKpGNavw6
-        /hPkA98OQqKsvhWqxtBO2PCVGvbhDyS+azsfJYYUuLuEkxUlO8yBG8fcLmQVtiyRjJlpE9Mn1B0Sa0HJ
-        5vJj0+zZQjiQKVhMdkfLFLmLlLVxHRAav1E4Ljwkm8xc1U0SqJ6GsJOou4ZErRwZ2gYCfbuqKRwEAMXh
-        opVoAHkMjKwplm/zkbV/RZaqQYkhhY1jU2QTS9e1Ncn0SVakIgK2LJ0jJxg1sWgCiJkh0UDJxkOse63Z
-        Tb9vhJCrA0cJd3t2yuVNHQxk7j7ZGrsV2CCbBI3Lpv4+E7JrcOXVkG2RWg6QE7px3K8fBnyisv6D7j+r
-        DbHdb+PDNCaAbKYwkcJx3bhcSIEkSBPFvfuyxMm5T0yWQUCSJHE8ipv+SQdKNkom6WIAQXTbU5PTZEff
-        C+vaXNOE28Wdax3bMM2CbF1cYTBoZs4AJHH098ndMUI2x2Ido4FqyAZWzA6VqgjJDrN29qkJGuC71bfW
-        A0vdvqsPYRoVkEZ8BRAKUNcXb82RubISAWlC2KaFMq2CUCtxI7Yzt+YyJsp270VhIhosKaLLgDyB0a8L
-        KngIBo5OxxiQoVdJ4jbTR+MYj3egdH8Q+KDOJ7qcqoFpFHSvFcLExUaEQKa6bzJk7CiduTJEkGShPD4L
-        a56XWBsmbrhYlMiIxSsQFna0PyGfIbFu5ZPOPdfoXPOU4mf0m0HFIgpKhnj2QR5BnyzWWIliKm5bx/kV
-        hZXZl1M1MI0CLnpEWSzuWd03auSkXnFRvSiKeAsxEI6d2I3iIRwyUBoxnJPOJ339+Lxz3Lhritm4DhgW
-        UQC/+Sy89rBzsyY5NyMKEx6a/jhUBgrehf9Apn7H8GvFk9C3NQXsLWRXUjUwjQK93Shyf5xITu7HHU9L
-        Qha6XgjSJA3XCoG4eMjGrp8MCKZPkM1gYDs+IQ/Vsh31LJi8fNuNCcmFaWOK31F4vE9t/27rLFG3zK8N
-        srmpIiGbZV/rWL+C0BxAUUnVwDQKWGaMThAJDiRC1n0jrxUXTszWkw5w3xDKyWXBRde8d7zzXDEURK5f
-        iS60PF50zfF2EO0vje5unykDgMwa4LIT4lF73A7gRRiA434/LFlMCckGCdl4K+tYewlMo8AjmxNGPOTk
-        4jqJsahSErTopPPJYMBVQy6KwyUzAFDbJxsXyABgscStKHoEXD9tINwnUMBgiFWdQjxIGCDq8tkXA4nE
-        MCRZkZNdhGkUBGTvePzXkqBBGOrmpONKJSGLYzZEozBIULUz3ULZZPRk6+r+UTNtfFUnYAnVIjteWmV/
-        bMvgY38fL3/QdOGKnOwiTKPAuyuFE8bJJHYzx0bdZNEomt8QwKVJyEdxkAER70dtiOGoWq50Ees9Utke
-        lfq2BBCrCsd9x0SjZAYO/wVvowlgFnq6inYiwjQKArIBN/NDpq5Zo3LiOBcz/DgOgWTI9IGqiam+qnsK
-        BtjEu26VvKCckn3Uko3jvcqhe+H9AtbvD+75JNqkuB3fWczRdrsWRAPY69eH3DVj2L8MmEYBKohPkt6Z
-        gpKYOinZEK1Kx7Xj0nHhqJo5tV7STBZQDAKrBSeY/TB49EJHNeBmCzkOnhy1jtODtX0W8ChKOEllWL9v
-        8zKpU/D/NYH07V8mTGOC+J4zvTuFAyRGoloUDpEQzncWOPqd2jeJoaxkKdnu34tLXHgtICFUT1Iu67ZQ
-        y5Uva/tyUAWj1u0TT0ns/L8DO4vPl0F6+H+xHwuYxgTx47b+naSom0RNb/jjpTXcyanvMfHXpnUalij7
-        pYeKc2X9jFfGLIIBoYEQoZ7k/jsOTfGqBdfhhWzW+K1j9AAx4fa4bRRsqReXrdsB2tKO72wD4eFaPaBe
-        B4OC39zUoaGCNn69D92f9pP8rhAiTGMCTlB0ovwbF3ChuFLu6uShOS5H6iO0KJ7s22/LwGCVS2I2xEI0
-        aJ1Z/B1Pp3zsX9Ms8ZnQoEQD+sdraP+VkLqBocoFlbAPTjx23HBYB7HWNoCTz7ZWHdB+AR7CaoO3YL/a
-        DmLLeTUdfFkwjQmMW5IgkzcXca92WHjqAtft37bEA3WomwcBhHDIhWglPV4VU4J9JftgisYgs5SShVri
-        tcLqx4KfhFn11ZIdEg2ZIaEoXtp6x05IpQ+/7eGRDeJHcdWVQyYu3CKbh/BwsyRnEEO8Ro0kdcRzvsvS
-        ZjRHJs4zVQMsxTKlIv4/OalBYrNP9JrnG2VbbhGuNgsHiQuv4fKm1Y8FVKdu0yJVXSsEhHW0pw6lhnXq
-        /n0bxLKfsC9+0xcDhgFxeG4ceI/k4hYhkgfhIdt/DpqCSydus8CiT1/yHPWY+x8U1VMvF0CGDhXy6Wfw
-        dTdLzAc8vcHTHAwm6gGJH9vwyd2pPZpy1fAwftgPaoIYK2ajqqzt2Aa7NRB0G9qEdRBoDRDaQ2hoVzD4
-        2Jf2bcE0liDOylE3yoUUi2wey8Fl82w1JPNOMh7BwQbxkMztSNqWAQGRkEufCn4DfZuhbssg0sUU64T4
-        SG5aqPE6dtiPnkAUF9aBrO0qkU1/Ftm0t8A2AMJ3PvPbku0U5dRtGksQJ2qA2IsKIZuH4f3Ci+pw2Twq
-        Sz1EQybEQhyEWYV6H+HTmlq4d4170yCdKRikWwecxGpQwxKp1RfqZWD5UysFNrazBp66XogK6wB2y40L
-        WXt2CqH065NNsoZN7RAf5jAa3y2YRhPx66w6ZvSR6RZkhm84oEAudTx7hRtG5ZAHSUoixIdvMKyl4BHw
-        FhDOSfUPNnVJk9ugrWPJgN9PNVASrDpAHeRZdbqtFR5CaDLINr6dgRgePwOIthZMowlv+bRzcVHZFtm4
-        X331hRJMrAZaGBDhy3EgUN12uUIbSQQjDwDhzOX9g03cd42P/gC/nyygKlSnbrrcdlofZtx4BF+BfA9J
-        A5DpT718ssP2tC2namAaM6F3m0ZYuHS+vNUgLJBIkqXuG7IZAH7BHr4cB+Ky3LwWtvEHCYOJ9Xo94JT7
-        7sGDAUcbDJByygO0AcT0sO5wYRozgVLiqdjnC/u6zrejeXNQNOPWF+CQkFWj2GqKKloL831dUUsRXaP7
-        7i0wjWXBNCbOziE8XplKCmRr9k1B1fodZYaKrqocPCCZva9q3lFK5g7ZKaIZjNb/ztEDsgEEx4TLp0c4
-        rlWnVyRhqFELZDEQaimQyus0mAH4HoI3L5Aodvz9hjTRvfyadTmYxqrgEw6i6RnkQrYWXLmfdetjP2HB
-        G1jxmrm6TuPIA9RDML9fsGy527Lo5pzoGmAaqwYuPY7hYNtLdfJ6Cy2VEi4tqD9M4sj0IVlBfKag9Pbl
-        LW7Xov6HiObqXE50RZjGmsBJ9l7BIWrfPFWeYqj4lkKjoNqFazaniAbiEaLB1b36tkP7AlVcusxRhGns
-        EXji03uPeGF+n6KbDRK4rMI7zUjCQpIBSi4hmWXQYt/2/8lRAtPYY6By7kr1YznA1TNHZ0AU3W1SLJKJ
-        x6uX/E0GS8pdAwbUcTiH/irANB42IBT36im9BCgzQtfrlyYoIdYH7XOSDwum8YgCV4vaIcsisRzYhkFT
-        wyXKHNkwjUcVrLHjzhkAFqjPY/FRgWnMcSLCnfR/GYf+/QqO/dsAAAAASUVORK5CYII=
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAABGrSURBVHhe7Z2Lj1XVFcb9L9qmaUtqY1spvjWxnUJp
+        qRFrNVVjQIqWqIBCDJairYolQAVieUxFAWUcwYxYR1AjWGaMHeQ1A0VARyCAgQqopWPBy8hLHrv5rXvW
+        YZ+1z7mPGd5zd/Ll3lnndc/51rfW2vvsc+YC59wFFXQNBIYKzl8EhgrOXwSGCs5fBIYKzl8EhnMCxw47
+        d/AT5w7syIPvRw+4YL0KEggMZz0O7HDz50x2A269wV3YrZuA77XTx7rDn33g3JFchfQMBIazBseP5olD
+        sSgZ24Ed7qEHBrlRI0e6jRs2YJPW2NDg7r5vhLviR92FdFG73V8FZynZR3Ku5e0XhViAkl37Bjfu0eFu
+        fn19TLLfvjpyzE2pecVV9ewt21QIDxEYzjiOH3UbV7/u+va90eVyEpJFuSNHDHPV06ZZjhOtLbffzXt7
+        jRCOY7hD/8UcHqOLIjCccRzJCVF+mKZBvJJfqK3d8okQfuVV10h0kHRgj9FFERjOOI7k3NBBt7tdO3da
+        HktqO9ty7vUVm9wfJzyVD+eVgi1GYDjjOHZYcvTQwYMtjyU1cjdko26qdOmW2WN0UQSGUwLU1dbg3Pap
+        zq3r71xzlXNN3dLxrxuc2zZVQnnPqirJ1+W0L748JGSDCtlJBIaTBgj+rN651sEhoaVg0yjpRkF4OW3z
+        zs9jZZMOKkXaCQSGTgOSUfCySwICDy/4tttf9y2379lvuj3V30gFywFko8yW5mbLp3S/0nK65mtAv1sK
+        tErOjhEYOoUUkiEOEv8z5mupaJtySWDbPeG7rvnNWe6Ofv0sn9LWrF0vZJLXP966RUhe/uHHMdGom/DP
+        4Ev1xIcrfe4IgaFDaN+Qz7Ueyah39/ivB0T6hG5f8oyE6tbGGe7Qmqfdl4tHuv8920c+qaTT1KuN3Dx7
+        0Srpj1N5v/zP91390g+FbPrb2ogClT53HoGhbJCXjZILkaw4sGKS6/Xja9z1V1/hLv/hD9zF37tQwjZK
+        bFww040bO9bnNmzHj4qidRBlxGMThHxVtt+IALs2NvI1/P1dCIGhLGwaFZN89K3vuLZJxUkGhG66V32u
+        vMw9ektfd1efXq5/75/K501VP3aXfv8iKcwY6yYUFxpMWbRqi5u+YLnr1aevG/1UXSKUa2tevbbS5+4U
+        2R7RpapZQchG1aNuus7df8Mv3O1VeYX3vvxSUThOcO8vewqu7dE9MXRqW+OajyR8QzQKV3UDlpHLcQjJ
+        /128GxYYSoIh2pJZCJqPIReyIRpyb772KiH7rp9dGxPNcpTP8jTC9x/6KiYWdQ8Y8nuBT7iiQnZHyN5Z
+        02GiCd/k416X9YiJJk/Pn/lnUTAOANk+UH4W4as27YrJhOCpdYtF3RDP3xRtLMNeSp97wohhrlQs+8fC
+        gvs6mWj77FMHrL1cBIaC2LOyw0QDKm0KMFXuzdf1crkPFjq3od7tfGeGu+PXP5diDZX7hLOuEk4ep+/d
+        um13QrkQDKnk7ptv7ScFG1X6fSMfk5si3EkrdlPEOlohvFY7u+C+TgYg+LmJ4+V4m9a91+njBYZMUNxE
+        fWiKMUtkKaC7xUAHpEFq7V8fFaJd67wYDc+NjpejfEs4NvI6Kh9f/bxU4ygYorFtWDrX5Vonu8Y3auLK
+        XmawlDBtyRJaCKea7OrHHk4c7/SS7eXpUqtuC7pb5GudTgQgdeMbU2KyUfjQ/jfGyyGWEI/aNY9rCkDl
+        rEPoRr2EaiVYhmnpFtrzKAC9sA31L7vR99wZEMwFt2Tvb28XO3/7wMYyewx/fT5RL5+AASLW8Y/j/ya7
+        vg/dr7X5xw5OOBUMmniDJZbEUtBWfbUMoFCF39inyo0aMkDIgmwIVrIh3ncGH0o6J08u1wKOLht2IgLd
+        NtaV2oJIVEZ3yyeVvGwvuL+OkmrXsfBzO2Tyu+06Co7pHyMNWcdMcxBs/vkFJ5wK7lR1InwDQviRLa9K
+        nt61eoEQm2upTRCteH78cLey7on47/nVo4RIVK5Kp3KnoFPwN0RT8BHKjzf/Ku+gDOHa88mAr4gssnUd
+        lOYvIxJARFpE0OLKD83sn/VH9rslYWM9u72PU0s248qRqnWMG+L2vTFMulFpY9tZONz6gqju0Ka33LbG
+        ZwUH170UkN2++kVZhiOwvPqRe+KijpNAxVT0vS7tIU4A+exXhkXbGuT3yc0UfjfqtudUArLITgPqfW/Z
+        uxKGgd1OL7rdJ3/XTZ8mYB0N42mEUqhp6PcdRPeDQ/n7x7FsBR/88ABRrvZVzaAI+RGgolIJxzlQ9qdr
+        Frmti2cJPl1SE5AN0bqc7xRthHtCYFoYRNkQjurJ2aQM6gp10nJzN7DEALsOBNsLnwYlO41EBeflh3y7
+        3Fcp6/nL+A3YNaqwL5uvQXCSAVBGS2+3Z+0MuRNFkUVF/ZfhA6TbRNjEZolNA2Sz/pCBt4kSIX7U3bcl
+        QjlKbpw9TkK3Et62vFbCOoSj7izCUTkOmHvlt3K8WN0Ua/a8iqAY2ajGX8Zvgnxgt7NEpe1boWq0dtKG
+        r1S7D9+RtHi0CAwJMLuEi7WzRvrA1WMeFLJyO5ZJxUy3ie4T6rbEpkHJ5vZjbU1NXHhJFywiu6V+iswi
+        ZWxcHULzNwonhFuydbgVdVMEaqQh7cTqLqNQsxfSh65jc6SqyToBQHGEaCUaQB6OkdXFsvsodnxFlqpB
+        YEhg69gE2eTSjY210n2SEanWeW7H8nlygVETgyaAnGmJ9skmQmx8p85Nf3yYkKuOE4fyg3vl9qY6A5W7
+        T7bmbgU2yKZA47apf8yOhPJSyE4jtRAgx4Zxwq+fBnyisn5Dsd9JbrfnowgMCUA2XZi2BgndhFxIgSRI
+        E8VtXih5krtYOAFFkuTx6qszyUbJFF04EEQ3vjg5SfaGepfb2OhqJzwo4VyXsQ3dLMjWwRWcQStzHJDC
+        0T8ms2OEbM7Fnl8G0i5i2sVOy9lWqQpLtq3aOaYWaIDvafv2j5+mbluU+QgMPiCN/AogFKCuY+/Pk76y
+        EgFpQti2JulWaffHFm7kdvrW3MZE2e6jBnEWO4qWBeoEvUvGfogQOI52x3BIG1XivE33MeUcz3agdN8J
+        7DKf6EKqBoEhRvsGIUxC7OaFQqaGbypk7CidvjJEUGShPD5z61+TXGsLN0IsSsRjiQqkhT3Nc+TTEutW
+        z3Xu1Wrn6qbkP1fPFadiEAUlQzzHoI5gnwzW2OOBRN6253gOw6aEYqoGgSEGNz1aB0t41vCNGrmot17f
+        SxRFvoUYCMdO7kbxEA4ZKI0czkXnk3395Jqr3Lg78tW4OgyDKIC/+cy9M9O52ZOcm/FEArV/GiyOQnTh
+        N1CpPzR0YP7O2ZzJQSTpSmQXUzUIDDF0utG6/nIhubift7wkBZkNvRCkRRqhFQIJ8ZCNXT9xCLpPkI0z
+        sB2fkIdq2Y7lDJgsfODumOTctDH57yg8Oqauv7lhtqhb+tcpZDOpIiabYV97nucotAZQFFM1CAwxGGaM
+        pv9CImQ9PnyghHByth9yCd8QysVlwEXHvPd8+Go+FQy6PSY6V/9CPjRH20G0PzS6v3mWOACVNSBkx8Sj
+        du+4RBEccNwfhsSDKZZsEJNNtLLn2YUQGGJ4ZHPByIdcXEInORZVSoEWjV3jDIRqyEVxhGQcALV9sXWx
+        OACDJW5VPiIQ+lkHwn0CBTiDCeGCyElwEA35HAtHojC0JFfITiIwxDBk73nhN1KgQRjq5qITSqUgi3I2
+        RKMwSFC1091C2VT0VOsa/lEz6/iqjsEQqiUaREOrHI9tcT6O9/nKp1NDeIXsJAJDDG9WChdMZ4TSx0bd
+        VNEomr8hgFuT2m+GDIj4uHmO5HBULXe6yPUeqWyPSgOylXBVOOE7Ihol4zj8FqKNFoBZ6Ogo2vmIwBDD
+        kA2YzA+ZOmaNysnj3Mzw8zgEykN1e1aKqsmpvqo7Chxs4iP3S11QSMmZZNtzNCB6FUJ705MCxu+PH/wi
+        3h/fGczR9fYtHp15LJk1k2I/HQgMMVBBdJF0ZgpKouukZEO0Kl1vSRLCUTV9ar2lGQ+gpBBYKrjAHMe/
+        0VEKmGwh58GTo/YcDey2hUBEUcIpKu3yw9tXJI7H79cC0h73dCEwJBDNOdPZKTphENXq1CEI5zsDHD0u
+        7h7nUEaylGz376VBCC8HFIQaSQpV3Wko586X3bYYVMGodffEi2I7v+/o3vzzZZBuf6897ulCYEggetzW
+        n0mq88h0wh8vrWEmp77HxB+b1m5YrOw3n8n3lfUzGhmz5CpIDaQIjSRPPnSii1cquA8vZDPGb8/PAGLs
+        9oRtFJymXkK2bgdYl/X4zjYQbsfqAcvVGRT8zaQOTRU2MtjfqWC7+O8iKSIwJBDNEfcnLhBCCaXM6uSh
+        OW5H6iO0KJ7q219X3ng0dGA+Z0MsRIOGWfm/o+6UjyPr6yQ/+5MYAPsnatiLl4XEBIYSB1TsPrjw2AnD
+        dhnEpm0DlHxrt/sFRAi7HBAtZCZPtB7E2ijhQ50vC4EhgZQpSZDJm4uYq20bT10Quv1pSzxQh7p5EEAI
+        h1yIVtKjUTEl2FeyD7poaXe1CqGcfK2w+8iCX4TZZaBUsi3RMsvGEIriZV3v3Emp7MNft3Nkg+hRXA3l
+        kEkITyObh/AIsxRnEEO+Ro0UdeRzvsvQ5iP3SJ6nqwYYiqVLRf6fO2mk5Gaf6PWvVecnPSyYWXIVDuIQ
+        XsbtTbuPLKA6DZtppGpohQC7TMM0SrXLNPz7NojlOHZf2kPAYXCIzoVx4D2SS1iESB6Eh2z/OWgaIZ28
+        LQ/tRU9f8hz1mCefFtWzXG6ADB4s5LOffnfeKzkf8PQGT3PgTCwHFH46Y4XZqaWSnehylfEwvt0PaoKY
+        tJyNqrK205yb5gi6DevYZdp9s3bWh1BrV+B8fmpIQ2BIRVSVo26UCylpZPNYDiGbZ6shmXeS8QgONoiH
+        ZKYj6bo4BERCLvtU8DfQtxnqtjiRDqakXRAf8aSFMu9j2/3oBURxdhnI2q4Y2ewvjWwt0Cz0OBC+9+Xf
+        BdvFxy2g7sCQCu9hPnIvKoRsHob3Gy+qI2TzqCzLIRoyIRbisl53xXIf9mlNbcxdY24apNMFS7t/DeJc
+        DcoYIrX7AagXx/K7VgpsbJfmeBp608gG2G24BkLWwb1CqD+Qw74o1vwBHoi3NYzm9zQEhkxEr7NqmdFN
+        uluQad9wQINcfXKSMIzKIQ+SlESIt28wLKcREYgWEG6HSxO3NJkGbc+jAOyFLwYlwdoVLIM8a/e3TUsP
+        FloMWsfBEe352y6dj8CQCW/4tHVpXtlpZBN+9dUXSjC52n/vKA5hX44DgVkvofUb60ghGKUM+vL+ycbh
+        u8xHf4C9yGlAVajO7wfbdRS63FbcRARfgXy3pAHI9LtePtl2fdYtpGoQGApCZ5s2dXNNyxfJWw1sg0SK
+        LA3fkI0D+A27fTkOxGWFeW1s4zsJzsR4vZ5wInyXMZv0dEErcGu36wB/7P1kITAUBEqJumJfNXV3rR80
+        nWAialpx6wtwKMhKUWwpTRWtjf6+jqgliC4zfHcVBIaioBsTVecQHo1MxQ2ytfqm+W9LQJlW0SW140el
+        svdVzTtKqdwhO0E0zmh/cwWCwFASIFhfbsenRzihVbtXFGGoURtk4QjlNEjldRr0APwIwZsXKBRb/j4o
+        SXSZeborITCUDJ9wsLNGyPXfNUoot//eQR3Bb0SDtHxNX127cdQBGiHo3y9esdLtWHJvhegyEBjKAiHd
+        e7Phrjer5PUW2tIITGuo3xZx+sJZBfmZhtKbV9a7fUt6niCau3MVoosiMJQNLrL3Cg5R+/ap8hRD0bcU
+        pjRU27R+e4JoIBHhwA7XvvaBE8eKIkrwmypIRWDoMHji03uPeG5Rt3yYNQVcVuOdZhRhlmSAkgOSGQYt
+        8bZlBXkEhk4h6/XThHr66DhEPtwWJJl8vHbZ38RZEuEa4FBnYR/6XEBgOCmAUMJrof8YgDLX9Xdt794U
+        IyDWrl8huVMIDCcdhFr9dxGWwGJgG5ymjFuUFWQjMJxyMMau/y8kDSyv5OJTgsBQwfmL/wMZh/79EDyz
+        pAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
